fix navbar behind img & add custom button menu

--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -29,19 +29,21 @@
 @media screen and (max-width: 500px) {
   .liste {
     flex-direction: column;
-    height: 200px;
+    height: 9.9rem;
     display: flex;
     justify-content: center;
+    left: 1.4rem;
   }
-  .items:nth-child(1) {
-    border-top: 1px solid #fff;
-  }
+
   .items {
     height: 50px;
     width: 100%;
     border-bottom: 1px solid #fff;
     line-height: 50px;
+    z-index: 100;
+    background-color: #010d18;
   }
+
   .btn {
     display: block;
     justify-items: center;
@@ -49,5 +51,13 @@
     top: 10px;
     color: #333;
     cursor: pointer;
+    background: none;
+    border: none;
+  }
+
+  .menuIcon {
+    height: 1.5rem;
+    width: 1.5rem;
+    color: #f0f0f0;
   }
 }
